--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-recommendations",
+  "name": "movie-like-this",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.40",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.3.0",
     "next": "14.2.5",
     "react": "^18",
